# docker-hspf

./: README.md
hspf-dev/devel/: CMakeLists.txt  README.txt
hspf-dev/devel/src/: CMakeLists.txt  fhsmes.inc  hspfbat.f  hspsta.f  versn.inc
hspf-dev/devel/test/: bc.lis  runTest.lis  runTest.xml  test.wdm  test1.dss  test2.wdm
hspf-dev/devel/test/Base/: d2u.sh  error.fil  test.sh  test.wdm  test01.ech  test04.d61  test04.ech  test05.d62  test05.ech  test05.out  test05.p92  test07.d63  test07.ech  test07.out  test08.d64  test08.ech  test08.out  test09.ech  test09.out  test09.p93  test10.d66  test10.ech  test10.out  test10.p94  test10.p95  test11.ech  test11.eng  test11.met  test11.p96  test12.d68  test12.ech  test12.out  test12.p97  test13.d69  test13.ech  test13.out  test13.p98  test14.ech  test15.dis  test15.ech  (+6 more)
hspf-dev/devel/test/Current/: diftest.sh  error.fil  gmon.out  test.difs  test.sh  test.wdm  test03.ech  test04.d61  test05.d62  test05.ech  test05.out  test05.p92  test06.ech  test07.d63  test07.ech  test07.out  test08.d64  test08.ech  test08.out  test09.d65  test09.out  test09.p93  test1.dss  test10.d66  test10.ech  test10.out  test10.p94  test10.p95  test11.d67  (+17 more)
libatc-dev/devel/: .sconsign.dblite  CMakeLists.txt  README.md
libatc-dev/devel/msg/: CMakeLists.txt  hspfmsg.in  message.in
libatc-dev/devel/msg/ADWDM/: attr001.seq
libatc-dev/devel/msg/HSPF/: HRUNTSPW.SEQ  SPECACT.SEQ
libatc-dev/devel/msg/HSPF12_4/: HSPFMSG.DOC
libatc-dev/devel/msg/IOWDM/: INFLAT.SEQ  INFLTS.SEQ  INOPT.SEQ  IOWDM.SEQ  IOWDMC.SEQ  OTOPT.SEQ
libatc-dev/devel/src/lib/: abspath.cmake
libatc-dev/devel/src/lib/ADWDM/: ADUTIL.FOR  CMakeLists.txt  EHUTLF90.FOR  EHUTLH.FOR  EHUTOT.FOR  MSIMPT.FOR  MSOPEN.FOR  USYS.FOR  USYSLX.FOR  USYSUX.FOR  UTWDMD.FOR  WDMCHK.FOR  ZTWDMF.FOR
libatc-dev/devel/src/lib/AIDE/: ANINIT.FOR  ANINIT_M.FOR  CMakeLists.txt  QTCHAR.FOR  QTFILE.FOR  QTNUMB.FOR  QTSCN1.FOR  QTSTGT.FOR  UTMISC.FOR  UTMISC_M.FOR  UTUPRM.FOR  Z0UTIL.FOR  Z0UTIL_M.FOR  Z1UTIL.FOR  Z4UTIL.FOR  Z4UTIL_M.FOR  ZCLBAK.FOR  ZSYSPC.FOR  ZTSCN1.FOR  ZUTIL.FOR  ZUTILX.FOR  ZUTILY.FOR  ZUTILY_M.FOR  ZUTIL_M.FOR
libatc-dev/devel/src/lib/ANN/: ATWORK.FOR  CMakeLists.txt  DSBLD.FOR  DSWORK.FOR  PGEBAT.FOR  PRWARC.FOR  TSWORK.FOR  WDPLOT.FOR
libatc-dev/devel/src/lib/AWSTAT/: A193.FOR  A193PL.FOR  A193UT.FOR  CMakeLists.txt  MAKEFILE.AM  MAKEFILE.IN  PKPLOT.FOR  TSCMPR.FOR
libatc-dev/devel/src/lib/GRAPH/: CMakeLists.txt  GKSINT.FOR  GRCAXE.FOR  GRCCRV.FOR  GRCLAY.FOR  GRCMEG.FOR  GRCOMN.FOR  GRCVAR.FOR  GRDATA.FOR  GRDUMP.FOR  GRGKS.FOR  GRSYUX.FOR  GRTEXT.FOR
libatc-dev/devel/src/lib/HASSLIBS/: CMakeLists.txt  HASS_ENT.F90  Himutil.F90  Hspsta.FOR  SCENMOD.F90  VB_SCEN.F90  WIN32MOD.F90  noxgks.f
libatc-dev/devel/src/lib/HEC/: ATTACHDG.FOR  ATTACHPC.FOR  CDATE.FOR  CHRIO1PG.FOR  CMakeLists.txt  CMakeLists.txt.orig  CTIME.FOR  DATIME.FOR  DATYMD.FOR  NAMLST.FOR  PCDLIN.FOR  PCHAR.H  PDISP.FOR  PEDIT.FOR  PEND.FOR  PERR.FOR  PEXLIN.FOR  PFNKEY.FOR  PGTLIN.FOR  PINQIR.FOR  PLDFUN.FOR  PLDMAC.FOR  PLDSCN.FOR  PMAIN.FOR  PNXTLN.FOR  PREAD1.FOR  PREAD2.FOR  PREADC.FOR  PRSTAT.FOR  PRTCR1.FOR  PRTCRX.FOR  PSET.FOR  PSETFN.FOR  PSFSCN.FOR  PSLSCN.FOR  PTTACH.FOR  SUBDAT.FOR  TIMERPG.FOR  WHEN.FOR  ZABORT.FOR  (+86 more)
libatc-dev/devel/src/lib/HSPDSS/: CMakeLists.txt  hdssut.f  hrindss.f  hruntsgd.f  hruntspd.f
libatc-dev/devel/src/lib/HSPF/: BC37DC0.tmp  CMakeLists.txt  HBINUX_SAVE.FOR  HBMPRAC.FOR  HFILES.FOR  HIMPGAS.FOR  HIMPSLD.FOR  HIOOSUP.FOR  HIOOSV.FOR  HIOUCI.FOR  HIRRIG.FOR  HOSUPER.FOR  HPER.FOR  HPERAGUT.FOR  HPERAIR.FOR  HPERNIT.FOR  HPERPHO.FOR  HPERSED.FOR  HPERWAT.FOR  HPERWAT.OLD  HPERWAT_RT2.FOR  HRCH.FOR  HRCHCON.FOR  HRCHGQU.FOR  HRCHHTR.FOR  HRCHHYD.ORIG  HRCHHYD_DEBUG.FOR  HRCHHYD_NODEBUG.FOR  HRCHPHC.FOR  HRCHRQ.FOR  HRCHSED.FOR  HRINGEN.FOR  HRINGEUT.FOR  HRINOPN.FOR  HRINSEQ.FOR  HRINTS.FOR  HRINTSS.FOR  HRUNTSGP.FOR  HRUNTSPT.FOR  HRUNTSPW.FOR  (+12 more)
libatc-dev/devel/src/lib/HSPF124beta/: CMakeLists.txt  HIMP.FOR  HIMPQUA.FOR  HIMPWAT.FOR  HIOSTA.FOR  HIOTSIN.FOR  HIOWRK.FOR  HPER.FOR  HPERGAS.FOR  HPERMST.FOR  HPERPES.FOR  HPERQUA.FOR  HPERSED.FOR  HPERSNO.FOR  HPERTMP.FOR  HPERTRA.FOR  HPERWAT.FOR  HPESTUT.FOR  HPRBUT.FOR  HRCH.FOR  HRCHACI.FOR  HRCHCON.FOR  HRCHGQU.FOR  HRCHHTR.FOR  HRCHHYD.FOR  HRCHNUT.FOR  HRCHOXR.FOR  HRCHRQ.FOR  HRCHSED.FOR  HRCHSHD.FOR  HRCHUT.FOR  HREPORT.FOR  HRINTS.FOR  HRUNTSGQ.FOR  HRUNTSGT.FOR  HRUNTSGW.FOR  HRUNTSUT.FOR  HRUNUT.FOR  HSPF.FOR  HSPFITAB.FOR  (+64 more)
libatc-dev/devel/src/lib/HSPNODSS/: CMakeLists.txt
libatc-dev/devel/src/lib/INCLUDE_ANNE/: CCLAS.INC  CDATE.INC  CFBUFF_DEBUG.INC  CMAP.INC  CTSDIR.INC  CWINDO.INC  FMSGWD.INC  ZCNTRL.INC
libatc-dev/devel/src/lib/INCLUDE_HSPF/: CBMPR.INC  CMDUM.INC  CPEST.INC  CRHAC.INC  CRHAD.INC  CRHCO.INC  CRHGQ.INC  CRHHD.INC  CRHHT.INC  CRHNU.INC  CRHOX.INC  CRHPH.INC  CRHPL.INC  CRHSE.INC  CWORK.INC
libatc-dev/devel/src/lib/INCLUDE_HSPF124beta/: CIOSTA.INC  CMOSV.INC  CRHAC.INC  CRHAD.INC  CRHCO.INC  CRHGQ.INC  CRHHD.INC  CRHHT.INC  CRHNU.INC  CRHOX.INC  CRHPH.INC  CRHPL.INC  CRHSE.INC  CRIN1.INC  CRIN2.INC  CRIN3.INC  CRIN4.INC  CSPEC.INC
libatc-dev/devel/src/lib/IOWDM/: CMakeLists.txt  INDBAT.FOR  INDSOP.FOR  INFLTS.FOR  INWATG.FOR  INWATX.FOR  INWBAT.FOR  INWDMU.FOR  INXBAT.FOR
libatc-dev/devel/src/lib/NEWAQT/: AGMAP.FOR  CMakeLists.txt  DAMAP.FOR  DSPECI.FOR  DURANI.FOR  DURBAT.FOR  EXSUTL.FOR  GRMAP.FOR  HGET.FOR  MAPSEG.FOR  MPSBAT.FOR  PRWPLT.FOR  SCNUTL.FOR  SGDATE.FOR  SGLABL.FOR  SGLIST.FOR  TSPLOT.FOR  UCDOIT.FOR  UCGETM.FOR  UCIREA.FOR  UCPUTM.FOR  UCSUPR.FOR  UTCLAS.FOR  UTDIR.FOR  UTMAP.FOR  UTPLOT.FOR  UTWIN.FOR  WSGSIM.FOR  WSGSYS.FOR  WSGUTL.FOR
libatc-dev/devel/src/lib/STATS/: CMakeLists.txt  UTSTAT.FOR
libatc-dev/devel/src/lib/UTIL/: CMakeLists.txt  UTCHAR.FOR  UTSCPC.FOR  UTSCXX.FOR
libatc-dev/devel/src/lib/WAIDE/: AGPLOT.FOR  AWFEB.FOR  CMakeLists.txt  PRWFIL.FOR  QTDATE.FOR  QTFILS.FOR  TSLEGN.FOR  TSLIGN.FOR  TSLIST.FOR
libatc-dev/devel/src/lib/WDM/: CMakeLists.txt  WDDLG.FOR  WDEXPT.FOR  WDSPTM.FOR  WDSPTM_DEBUG.FOR  WDSPTM_THJ.FOR  WDTBLE.FOR  WDTMS3.FOR
(+24 files in other folders)
