

# ALGEBR.FOR
# ATDISP.FOR
# ATWORK.FOR
# DSBLD.FOR
# DSWORK.FOR
# PGEBAT.FOR
# PGENER.FOR
# PRWARC.FOR
# QTPRNT.FOR
# TSWORK.FOR
# WDPLOT.FOR

#add_library(
#    anne_ann 
set(SRCS
        ALGEBR.FOR
        ATDISP.FOR
        ATWORK.FOR
        DSBLD.FOR
        DSWORK.FOR
        PGEBAT.FOR
        PGENER.FOR
        PRWARC.FOR
        QTPRNT.FOR
        TSWORK.FOR
        WDPLOT.FOR
    )

include(../abspath.cmake)

#install (TARGETS anne_ann LIBRARY DESTINATION lib)
