
cmake_minimum_required (VERSION 2.6)
project (libhec Fortran)

set(NSRCS
    ABORT.FOR ANREAD.FOR ASCTRL.FOR ATTACHDG.FOR ATTCRKDG.FOR ATTDCD.FOR ATTMAT.FOR ATTOPN.FOR ATTSUBDG.FOR
    BITS.FOR BKDATWDG.FOR BTEST.FOR CCREAT.FOR CDATE.FOR CDELET.FOR CH2HOL.FOR CHDLM.FOR CHGTYP.FOR
    CHRBLK.FOR CHRFIL.FOR CHRFLB.FOR CHRHOL.FOR CHRIO1PG.FOR CHRLNB.FOR CJCHR.FOR CJSTR.FOR CKANSI.FOR
    CLINES.FOR CTIME.FOR CURTIM.FOR DATCLL.FOR DATCLN.FOR DATIME.FOR DATJUL.FOR
    DATYMD.FOR DCAT.FOR DCDLTR.FOR DCINFO.FOR DCREAL.FOR DCREPT.FOR DCSD3R.FOR DHCHEK.FOR DHINFO.FOR DHINIT.FOR
    DIBIN.FOR DMREAL.FOR DUDLTR.FOR
    DUREAL.FOR DUREPT.FOR DUSD3R.FOR FINDLM.FOR GETBIN.FOR GETHOLDG.FOR GETIME.FOR GETNAM.FOR
    GTCOPT.FOR HOL2CH.FOR HOLCHR.FOR IBCLR_DG.FOR IBITS.FOR IBSET_DG.FOR ICTIME.FOR IDAYWK.FOR IHM2M.FOR
    INCTIM.FOR INDEXR.FOR INTGRC.FOR INTGR.FOR ISCAN.FOR IYMDJLDG.FOR JLIYMD.FOR JULDAT.FOR LBTEST.FOR
    LCOPTS.FOR LEQNER.FOR LFLNB.FOR LGENER.FOR LGTNER.FOR LISFIL.FOR LISNUM.FOR LJCHR.FOR LJSTR.FOR LLENER.FOR
    LLTNER.FOR LOCASE.FOR M2IHM.FOR MATCH.FOR MESSAG.FOR MVBITS.FOR NAMFIL.FOR NAMLST.FOR
    NINDX.FOR NINDXR.FOR NOPERS.FOR NSCAN.FOR NSERCH.FOR NUMLIN.FOR PARSEQ.FOR PARSLI.FOR PCDLIN.FOR
    PDISP.FOR PEDIT.FOR PEND.FOR PERR.FOR PEXLIN.FOR PFIND.FOR PFNKEY.FOR PGFSCN.FOR PGTLIN.FOR PINQIR.FOR
    PLDFUN.FOR PLDMAC.FOR PLDSCN.FOR PMAIN.FOR PMCSUB.FOR PMDUM.FOR PNXTLN.FOR POSFL.FOR PREAD1.FOR PREAD2.FOR
    PREADC.FOR PREAD.FOR PRSTAT.FOR PRTARY.FOR PRTCR1.FOR PRTCRX.FOR PRTWRD.FOR PSCATT.FOR PSETFN.FOR PSET.FOR
    PSFSCN.FOR PSLSCN.FOR PTTACH.FOR PUTHOL90.FOR R2SD3.FOR RBELL.FOR REMBLK.FOR RJCHR.FOR RJSTR.FOR 
    SD32R.FOR SETDLM.FOR SETNAM.FOR SUBDAT.FOR TRUNAM.FOR UPCASE.FOR VANSI.FOR VATT.FOR VEND.FOR
    VERASE.FOR VMOVCR.FOR VWTLA.FOR WAIT.FOR WAITS.FOR WHEN.FOR WIND.FOR XREALC.FOR XREAL.FOR
    YMDDAT.FOR ZABORT.FOR ZASSIG.FOR ZBDUMP.FOR ZBEGDT.FOR ZCAOUT.FOR ZCATDR.FOR ZCATFI.FOR ZCAT.FOR
    ZCATIT.FOR ZCATLG.FOR ZCHECK.FOR ZCHKPN.FOR ZCLOSE.FOR ZCOFIL.FOR ZCOREC.FOR ZDCINF.FOR
    ZDEBUG.FOR ZDELET.FOR ZDTYPE.FOR ZERROR.FOR ZFILST.FOR ZFNAMEDG.FOR ZFPN.FOR ZFSIZE.FOR ZFVER_DG.FOR
    ZGETAD.FOR ZGETAG.FOR ZGETCI.FOR ZGETRWDG.FOR ZGINTL.FOR ZGIRTS.FOR ZGPNP.FOR ZGTAGS.FOR ZGTDTS.FOR
    ZGTPFD.FOR ZGTREC.FOR ZHASH.FOR ZINCBK.FOR ZINIT.FOR ZINQIR.FOR ZINTBK.FOR ZIRBEG.FOR ZIRDOW.FOR
    ZLAHEY.FOR ZMATCA.FOR ZMIN2R.FOR ZMOVBK.FOR ZMULTU.FOR ZNWBIN.FOR ZNWRIT.FOR ZOFSET.FOR ZOPCAT.FOR
    ZOPEN.FOR ZOPNCA.FOR ZORDPN.FOR ZOWRIT.FOR ZPATH.FOR ZPIRTS.FOR ZPRTC.FOR ZPRTCI.FOR ZPTDTS.FOR ZPTPFD.FOR
    ZPTREC.FOR ZR2MIN.FOR ZRDBUF.FOR ZRDCAT.FOR ZRDINF.FOR ZRDPAT.FOR ZRDPN.FOR ZREAD.FOR ZREADX.FOR
    ZRECIN.FOR ZRENAM.FOR ZRETAG.FOR ZRITS.FOR ZRITSX.FOR ZRPD.FOR ZRREC.FOR ZRRTSB.FOR ZRRTS.FOR ZRRTSX.FOR
    ZRTALL.FOR ZRTEXT.FOR ZRTXTA.FOR ZSCOMP.FOR ZSELCA.FOR ZSETCA.FOR ZSETCI.FOR ZSET.FOR ZSETPR.FOR
    ZSITS.FOR ZSITSX.FOR ZSPD.FOR ZSQPRM.FOR ZSRTS.FOR ZSRTSX.FOR ZSTAGS.FOR ZSTEXT.FOR ZSTFH.FOR ZSTXTA.FOR
    ZTAGFI.FOR ZTAGPA.FOR ZTSINT.FOR ZUDALL.FOR ZUFPN.FOR ZUNDEL.FOR ZUPATH.FOR ZUPRTS.FOR ZUSTFH.FOR
    ZWLOCKDG.FOR ZWRBUF.FOR ZWREC.FOR ZWRITE.FOR ZWRITX.FOR TIMERPG.FOR)

#foreach(src ${NSRCS})
#    set(LSRCS ${LSRCS} HEC/${src})
#    endforeach()

add_library(hec SHARED 
    ${NSRCS}
    )
install (TARGETS hec DESTINATION lib)

