

# AGPLOT.FOR
# AGPLTX.FOR
# AGTERM.FOR
# ATINFO.FOR
# ATSAVE.FOR
# AWFEB.FOR
# PRWFIL.FOR
# QTDATE.FOR
# QTFILS.FOR
# TSLEGN.FOR
# TSLIGN.FOR
# TSLIST.FOR
# TSTABL.FOR
# WDPEAK.FOR
# WDSNAD.FOR

#add_library(
#    anne_waide 
set(SRCS
        AGPLOT.FOR
        AGPLTX.FOR
        AGTERM.FOR
        ATINFO.FOR
        ATSAVE.FOR
        AWFEB.FOR
        PRWFIL.FOR
        QTDATE.FOR
        QTFILS.FOR
        TSLEGN.FOR
        TSLIGN.FOR
        TSLIST.FOR
        TSTABL.FOR
        WDPEAK.FOR
        WDSNAD.FOR
    )

include(../abspath.cmake)
